2021-11-26 Se agregan catálogos PFA

--- a/CódigoFuente/BitacorasProduccion/Views/Plantas/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Plantas/Edit.cshtml
@@ -8,8 +8,6 @@
 
 }
 
-
-
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
@@ -42,7 +40,7 @@
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
-                                    @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
                                 </div>
                             </div>
