--- a/CódigoFuente/BitacorasProduccion/Views/Plantas/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Plantas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Portal_2_0.Models.plantas>
 
 @{
-    ViewBag.Title = "Listado de Empleados";
+    ViewBag.Title = "Listado de Plantas";
     ViewBag.PrimerNivel = "catalogos_admin";
     ViewBag.SegundoNivel = "plantas";
     ViewBag.ControllerName = "Plantas";
@@ -24,8 +24,6 @@
     <input type="hidden" value="@mensajeAlerta.Mensaje" id="mensajeAlert" />
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
-
-
 
 
 <div class="right_col" role="main">
